--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ body {
 h1, h2, h3 {
     font-weight: 600;
     margin-bottom: 1rem;
+    font-size: 1.5rem; 
 }
 
 a {
@@ -331,6 +332,6 @@ footer {
 }
 
 img{
-    width: 120px;
+    width: 50px;
     height: auto;
 }
